# advent_of_cpp

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  build_debug.sh  build_release.sh  run_debug.sh  run_release.sh
aoc_inputs/: day4.txt
day1/: main.cpp
day2/: main.cpp
day3/: main.cpp
day4/: main.cpp
src/: main.cpp
